--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,9 @@
-version: 2.1
-orbs:
-  node: circleci/node@13
+version: 2
 jobs:
   build-and-test:
-    executor:
-      name: node/default
+    docker:
+      - image: circleci/node:13
+    working_directory: ~/repo    
     steps:
       - checkout
       - node/with-cache:
@@ -12,6 +11,7 @@ jobs:
             - run: npm install            
             - run: npm ci
 workflows:
-    build-and-test:
-      jobs:
-        - build-and-test
+  version: 2
+  build:
+    jobs:
+      - build-and-test
