--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "feature-toggle-node",
-  "version": "0.0.2",
+  "version": "0.0.3-0",
   "description": "",
   "main": "lib/api.js",
   "files": [
