--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "clean": "rimraf ./lib",
     "watch": "tsc -p . --watch",
     "preversion": "npm run ci",    
-    "postversion": "git push && git push --tags && npm run clean"
+    "postversion": "git push --tags && npm run clean"
   },
   "repository": {
     "type": "git",
