Refactored names to the new package  (#9)
* Refactored circleci configuration

* added node version and changed the version to test the pipline

* added deploy-npm

* added npm version scripts

* Test new deploy pipeline. Upgrade to 0.0.2

* Test new deploy pipeline. Upgrade to 0.0.3-0

* Test new deploy pipeline. Upgrade to 0.0.3

* Test new deploy pipeline. Upgrade to 0.0.4

* Test new deploy pipeline. Upgrade to 0.0.5

* changed name to @sap-devx

* Test new deploy pipeline. Upgrade to 0.0.6

* Initial package release

* Refactored names to the new package

Co-authored-by: Frenkel <lior.frenkel@sap.com>

--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@sap-devx/feature-toggle-node",
-  "version": "0.0.5",
+  "version": "0.0.7",
   "description": "",
   "main": "lib/api.js",
+  "types": "lib/api.js",
   "files": [
     "lib",
     "src"
@@ -20,11 +21,11 @@
     "clean": "rimraf ./lib",
     "watch": "tsc -p . --watch",
     "preversion": "npm run ci",
-    "postversion": "git push --tags && npm run clean"
+    "postversion": "git push --tags"
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com/sap-staging/feature-toggle-node.git"
+    "url": "git@github.com/SAP/feature-toggle-node.git"    
   },
   "author": "",
   "license": "ISC",
