--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "clean": "rimraf ./lib",
     "watch": "tsc -p . --watch",
     "preversion": "npm run ci",
-    "postversion": "git push --tags"
+    "postversion": "git push --tags && npm run clean"
   },
   "repository": {
     "type": "git",
