--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,7 @@ jobs:
       - checkout      
       - run: npm install            
       - run: npm ci
+      - run: ls -la
       - run: echo node 10 job finished successfully
 
   node13:
@@ -19,6 +20,7 @@ jobs:
       - checkout      
       - run: npm install            
       - run: npm ci
+      - run: ls -la
       - run: echo node 13 job finished successfully
 
   deploy-npm:
