added a failing test (#16)
* Upgrade to 0.0.15

* added a failing test

* added npm-run-all ci

* changed ci to ci_a

* refactored to npm run ci

* removed false test

Co-authored-by: Frenkel <lior.frenkel@sap.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,8 @@ jobs:
     steps:
       - checkout      
       - run: npm install            
-      - run: npm ci
+      - run: npm run ci
+      - run: ls -la
       - run: echo node 10 job finished successfully
 
   node13:
@@ -18,7 +19,8 @@ jobs:
     steps:
       - checkout      
       - run: npm install            
-      - run: npm ci
+      - run: npm run ci
+      - run: ls -la
       - run: echo node 13 job finished successfully
 
   deploy-npm:
@@ -28,7 +30,7 @@ jobs:
     steps:
       - checkout      
       - run: npm install            
-      - run: npm ci
+      - run: npm run ci
       - run:
           name: Authenticate with registry
           command: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > ~/repo/.npmrc
