--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,14 +47,11 @@ workflows:
       - node10
       - node13
   deploy:
-    jobs:
-      - hold: # <<< A job that will require manual approval in the CircleCI web application.
-          type: approval
+    jobs:     
       - deploy-npm:
+          type: approval # <<< Deploy only after manual approval in the CircleCI web application.
           filters: # <<< Deploy only Tags
             tags:
               only: /^v.*/
             branches:
-              ignore: /.*/
-          requires: # <<< Deploy only after manual approval
-            - hold
+              ignore: /.*/          
