--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "type": "git",
     "url": "git@github.com/SAP/feature-toggle-node.git"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "SAP SE",
+  "license": "Apache-2.0",
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "1.0.1",
     "@types/chai": "^4.2.8",
