--- a/package.json
+++ b/package.json
@@ -38,9 +38,13 @@
     "@typescript-eslint/parser": "2.34.0",
     "coveralls": "3.1.0",
     "chai": "^4.2.0",
+    "cz-conventional-changelog": "3.3.0",
+    "@commitlint/cli": "11.0.0",
+    "@commitlint/config-conventional": "11.0.0",
     "eslint": "6.8.0",
     "eslint-config-prettier": "6.11.0",
     "eslint-plugin-prettier": "3.1.4",
+    "husky": "4.3.0",
     "mocha": "^8.0.1",
     "npm-run-all": "4.1.5",
     "nyc": "15.1.0",
@@ -49,7 +53,12 @@
     "sinon": "^9.0.2",
     "source-map-support": "0.5.19",
     "ts-node": "8.10.2",
-    "typescript": "3.9.7" 
+    "typescript": "3.9.7"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
   },
   "mocha": {
     "require": [
@@ -83,5 +92,15 @@
     "await-to-js": "^2.1.1",
     "parse-duration": "^0.4.4",
     "unleash-client": "^3.3.5"
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
   }
 }
