--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,19 +3,25 @@ version: 2
 jobs:
   node10:
     docker:
-      - image: circleci/node:10.19
+      - image: circleci/node:10.23 # Current BAS node version
     working_directory: ~/repo    
     steps:
       - checkout      
       - run: npm install            
-      - run: npm run ci
-      - run:
-          command: cat ./coverage/lcov.info | ./node_modules/.bin/coveralls
-          environment:
-            COVERALLS_SERVICE_NAME: circle-ci
-            COVERALLS_GIT_BRANCH: ${CIRCLE_BRANCH}
+      - run: npm run ci      
       - run: ls -la
       - run: echo node 10 job finished successfully
+
+  node12:
+    docker:
+      - image: circleci/node:12 # Future BAS node version
+    working_directory: ~/repo    
+    steps:
+      - checkout      
+      - run: npm install            
+      - run: npm run ci      
+      - run: ls -la
+      - run: echo node 12 job finished successfully
 
   node13:
     docker:
@@ -26,15 +32,21 @@ jobs:
       - run: npm install            
       - run: npm run ci
       - run:
-          name: Define environment variable with lastest commit's message
+          name: Define environment variable with latest commit message
           command: |
             echo 'export COMMIT_MESSAGE=$(git log -1 --pretty=format:"%s")' >> $BASH_ENV
             source $BASH_ENV
       - run:
           name: Lint commit message
           command: echo "$COMMIT_MESSAGE" | npx commitlint
+      - run:
+          command: cat ./coverage/lcov.info | ./node_modules/.bin/coveralls
+          environment:
+            COVERALLS_SERVICE_NAME: circle-ci
+            COVERALLS_GIT_BRANCH: ${CIRCLE_BRANCH}
       - run: ls -la
       - run: echo node 13 job finished successfully
+
 
   compliance:
     docker:
@@ -48,9 +60,10 @@ jobs:
             pip3 install --user reuse
             ~/.local/bin/reuse lint
 
+
   deploy-npm:
     docker:
-      - image: circleci/node:10.19
+      - image: circleci/node:13
     working_directory: ~/repo    
     steps:
       - checkout      
@@ -70,6 +83,7 @@ workflows:
   build:
     jobs:
       - node10
+      - node12
       - node13
       - compliance
   deploy:
