--- a/package.json
+++ b/package.json
@@ -29,20 +29,20 @@
   "author": "SAP SE",
   "license": "Apache-2.0",
   "dependencies": {
-    "await-to-js": "^2.1.1",
-    "parse-duration": "^0.4.4",
-    "unleash-client": "^3.4.0"
+    "await-to-js": "2.1.1",
+    "parse-duration": "0.4.4",
+    "unleash-client": "3.4.0"
   },
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "1.0.1",
-    "@types/chai": "^4.2.8",
-    "@types/mocha": "^8.0.1",
+    "@types/chai": "4.2.14",
+    "@types/mocha": "8.2.0",
     "@types/rimraf": "3.0.0",
-    "@types/sinon": "^9.0.0",
+    "@types/sinon": "9.0.10",
     "@typescript-eslint/eslint-plugin": "2.34.0",
     "@typescript-eslint/parser": "2.34.0",
     "coveralls": "3.1.0",
-    "chai": "^4.2.0",
+    "chai": "4.2.0",
     "cz-conventional-changelog": "3.3.0",
     "@commitlint/cli": "11.0.0",
     "@commitlint/config-conventional": "11.0.0",
@@ -50,12 +50,12 @@
     "eslint-config-prettier": "6.15.0",
     "eslint-plugin-prettier": "3.3.0",
     "husky": "4.3.6",
-    "mocha": "^8.0.1",
+    "mocha": "8.2.1",
     "npm-run-all": "4.1.5",
     "nyc": "15.1.0",
     "prettier": "2.2.1",
     "rimraf": "3.0.2",
-    "sinon": "^9.0.2",
+    "sinon": "9.2.2",
     "source-map-support": "0.5.19",
     "ts-node": "9.1.1",
     "typescript": "4.1.3"
@@ -92,7 +92,7 @@
     "lines": 100,
     "functions": 100,
     "statements": 100
-  },  
+  },
   "config": {
     "commitizen": {
       "path": "cz-conventional-changelog"
