--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,7 @@
     "plugin:@typescript-eslint/recommended",
     "plugin:prettier/recommended"
   ],
-  "rules": {     
+  "rules": {
+    "no-multiple-empty-lines": [2, {"max": 2}]
   }
 }
