feat: test cache

--- a/package.json
+++ b/package.json
@@ -79,9 +79,7 @@
     ],
     "exclude": [
       "src/example/example.ts",
-      "src/example/example_simple.ts",
-      "src/example/request.ts",
-      "src/example/utils.ts"
+      "src/example/example_simple.ts"
     ],
     "reporter": [
       "text",
