--- a/package.json
+++ b/package.json
@@ -81,13 +81,14 @@
       "src/example/example.ts",
       "src/example/example_simple.ts",
       "src/request.ts",
-      "src/utils.ts"
+      "src/utils.ts",
+      "src/client.ts"
     ],
     "reporter": [
       "text",
       "lcov"
     ],
-    "check-coverage": false,
+    "check-coverage": true,
     "all": true,
     "branches": 100,
     "lines": 100,
