--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
   "license": "Apache-2.0",
   "dependencies": {
     "await-to-js": "3.0.0",
-    "parse-duration": "0.4.4",
-    "unleash-client": "3.4.0"
+    "node-cache": "5.1.2",
+    "parse-duration": "0.4.4"
   },
   "devDependencies": {
+    "@commitlint/cli": "11.0.0",
+    "@commitlint/config-conventional": "12.0.1",
     "@istanbuljs/nyc-config-typescript": "1.0.1",
     "@types/chai": "4.2.15",
     "@types/mocha": "8.2.1",
@@ -41,11 +43,9 @@
     "@types/sinon": "9.0.11",
     "@typescript-eslint/eslint-plugin": "2.34.0",
     "@typescript-eslint/parser": "2.34.0",
-    "coveralls": "3.1.0",
     "chai": "4.3.4",
+    "coveralls": "3.1.0",
     "cz-conventional-changelog": "3.3.0",
-    "@commitlint/cli": "11.0.0",
-    "@commitlint/config-conventional": "12.0.1",
     "eslint": "6.8.0",
     "eslint-config-prettier": "6.15.0",
     "eslint-plugin-prettier": "3.3.1",
@@ -80,7 +80,8 @@
     "exclude": [
       "src/example/example.ts",
       "src/example/example_simple.ts",
-      "src/unleash_client_wrapper.ts"
+      "src/request.ts",
+      "src/utils.ts"
     ],
     "reporter": [
       "text",
