--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,31 +1,20 @@
 version: 2
 
 jobs:
-  node10:
+  future_node:
     docker:
-      - image: circleci/node:10.23 # Current BAS node version
+      - image: circleci/node:18 # Future BAS node version
     working_directory: ~/repo    
     steps:
       - checkout      
       - run: npm install            
       - run: npm run ci      
       - run: ls -la
-      - run: echo node 10 job finished successfully
+      - run: echo node 18 job finished successfully
 
-  node12:
+  current_node:
     docker:
-      - image: circleci/node:12 # Future BAS node version
-    working_directory: ~/repo    
-    steps:
-      - checkout      
-      - run: npm install            
-      - run: npm run ci      
-      - run: ls -la
-      - run: echo node 12 job finished successfully
-
-  node14:
-    docker:
-      - image: circleci/node:14
+      - image: circleci/node:16 # Current BAS node version
     working_directory: ~/repo    
     steps:
       - checkout      
@@ -45,7 +34,7 @@ jobs:
             COVERALLS_SERVICE_NAME: circle-ci
             COVERALLS_GIT_BRANCH: ${CIRCLE_BRANCH}
       - run: ls -la
-      - run: echo node 14 job finished successfully
+      - run: echo node 16 job finished successfully
 
 
   compliance:
@@ -63,7 +52,7 @@ jobs:
 
   deploy-npm:
     docker:
-      - image: circleci/node:14
+      - image: circleci/node:16
     working_directory: ~/repo    
     steps:
       - checkout      
@@ -82,9 +71,8 @@ workflows:
   version: 2
   build:
     jobs:
-      - node10
-      - node12
-      - node14
+      - current_node
+      - future_node
       - compliance
   deploy:
     jobs:     
