--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -80,6 +80,7 @@ workflows:
   version: 2
   build:
     jobs:
+      - previous_node
       - current_node
       - future_node
       - compliance
