--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2
 jobs:
   previous_node:
     docker:
-      - image: circleci/node:14 # Future BAS node version
+      - image: circleci/node:14 # Previous_node BAS node version
     working_directory: ~/repo    
     steps:
       - checkout      
