--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,94 +1,31 @@
-version: 2
+# Use the latest 2.1 version of CircleCI pipeline process engine.
+# See: https://circleci.com/docs/configuration-reference
+version: 2.1
 
+# Define a job to be invoked later in a workflow.
+# See: https://circleci.com/docs/jobs-steps/#jobs-overview & https://circleci.com/docs/configuration-reference/#jobs
 jobs:
-  previous_node:
+  say-hello:
+    # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
+    # See: https://circleci.com/docs/executor-intro/ & https://circleci.com/docs/configuration-reference/#executor-job
     docker:
-      - image: circleci/node:14 # Previous_node BAS node version
-    working_directory: ~/repo    
-    steps:
-      - checkout      
-      - run: npm install            
-      - run: npm run ci      
-      - run: ls -la
-      - run: echo node 14 job finished successfully
+      # Specify the version you desire here
+      # See: https://circleci.com/developer/images/image/cimg/base
+      - image: cimg/base:current
 
-  current_node:
-    docker:
-      - image: circleci/node:16.13.1 # Current BAS node version
-    working_directory: ~/repo    
+    # Add steps to the job
+    # See: https://circleci.com/docs/jobs-steps/#steps-overview & https://circleci.com/docs/configuration-reference/#steps
     steps:
-      - checkout      
-      - run: npm install            
-      - run: npm run ci
-      - run:
-          name: Define environment variable with latest commit message
-          command: |
-            echo 'export COMMIT_MESSAGE=$(git log -1 --pretty=format:"%s")' >> $BASH_ENV
-            source $BASH_ENV
-      - run:
-          name: Lint commit message
-          command: echo "$COMMIT_MESSAGE" | npx commitlint
-      - run:
-          command: cat ./coverage/lcov.info | ./node_modules/.bin/coveralls
-          environment:
-            COVERALLS_SERVICE_NAME: circle-ci
-            COVERALLS_GIT_BRANCH: ${CIRCLE_BRANCH}
-      - run: ls -la
-      - run: echo node 16 job finished successfully
-
-  future_node:
-    docker:
-      - image: circleci/node:17 # Future BAS node version
-    working_directory: ~/repo    
-    steps:
-      - checkout      
-      - run: npm install            
-      - run: npm run ci      
-      - run: ls -la
-      - run: echo node 17 job finished successfully
-
-  compliance:
-    docker:
-      - image: cimg/python:3.10.0
-    working_directory: ~/workdir
-    steps:
+      # Checkout the code as the first step.
       - checkout
       - run:
-          name: compliance check
-          command: |
-            pip3 install --user reuse
-            ~/.local/bin/reuse lint
+          name: "Say hello"
+          command: "echo Hello, World!"
 
-  deploy-npm:
-    docker:
-      - image: circleci/node:16
-    working_directory: ~/repo    
-    steps:
-      - checkout      
-      - run: npm install            
-      - run: npm run ci
-      - run:
-          name: Authenticate with registry
-          command: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > ~/repo/.npmrc
-      - run: ls -la
-      - run:
-          name: Publish package
-          command: npm publish --access public
-      - run: echo Deploy to NPM finished successfully
-
+# Orchestrate jobs using workflows
+# See: https://circleci.com/docs/workflows/ & https://circleci.com/docs/configuration-reference/#workflows
 workflows:
-  version: 2
-  build:
+  say-hello-workflow: # This is the name of the workflow, feel free to change it to better match your workflow.
+    # Inside the workflow, you define the jobs you want to run.
     jobs:
-      - previous_node
-      - current_node
-      - future_node
-      - compliance
-  deploy:
-    jobs:     
-      - deploy-npm:          
-          filters: # <<< Deploy only Tags
-            tags:
-              only: /^v.*/
-            branches:
-              ignore: /.*/          
+      - say-hello
