--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@istanbuljs/nyc-config-typescript": "1.0.1",
     "@types/chai": "4.2.15",
     "@types/mocha": "8.2.1",
+    "@types/node": "^22.13.9",
     "@types/rimraf": "3.0.0",
     "@types/sinon": "9.0.11",
     "@typescript-eslint/eslint-plugin": "2.34.0",
